JWTAuth, Cors SetUp, Dtos, Repo, Services

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=backend
+
+# Server Configuration
+server.port=8080
+
+# Spring Data JPA Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/users_management
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Security Configuration
+spring.security.debug=false
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
