--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,15 @@ spring.application.name=backend
 # Server Configuration
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/users_management
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/users_management
+#spring.datasource.username=root
+#spring.datasource.password=123456
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:users_management}
+spring.datasource.username=${DATABASE_USER:root}
+spring.datasource.password=${DATABASE_PASSWORD:123456}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
